--- a/ball_chaser_description/package.xml
+++ b/ball_chaser_description/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>robo_ball_catcher</name>
+  <name>ball_chaser_description</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="keshavraj024@gmail.com">keshav</maintainer>
